@@ -116,6 +116,8 @@ COM_PODCASTMANAGER_SHOW_FEED_TITLE_DESCRIPTION="Show the feed title as a heading
 COM_PODCASTMANAGER_SHOW_FEED_TITLE_LABEL="Show Feed Title"
 COM_PODCASTMANAGER_SHOW_ITEM_DESCRIPTION_DESCRIPTION="If defined, show the podcast episode description with each listing."
 COM_PODCASTMANAGER_SHOW_ITEM_DESCRIPTION_LABEL="Show Podcast Description"
+COM_PODCASTMANAGER_SHOW_ITEM_PLAYER_DESCRIPTION="If set to yes, then display the media player for each listed episode.  The Podcast Manager Content Plugin must be enabled for this player to render."
+COM_PODCASTMANAGER_SHOW_ITEM_PLAYER_LABEL="Show Podcast Player"
 COM_PODCASTMANAGER_SUBMENU_FEEDS="Feeds"
 COM_PODCASTMANAGER_SUBMENU_FILES="File Manager"
 COM_PODCASTMANAGER_SUBMENU_INFO="Information"
