@@ -1,3 +1,8 @@
+13-July-2011 Michael Babker Version 1.8 Changes
++ Allow front end feed view to render onContentPrepare plugin
++ Add parameter to render the media player on the feed view
+~ Optimize the content plugin to handle data from the feed view
+
 12-July-2011 Michael Babker Version 1.8 Changes
 + Add script to display the runtime
 
